k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nh-website
  labels:
    app: nh-website
spec:
  selector:
    app: nh-website
  ports:
    - port: 80
      targetPort: 8000
